# src/main/java/org/example/mikhaylovivan2semester/exception/GlobalExceptionHandler.java
@@ -1,0 +1,27 @@
+package org.example.mikhaylovivan2semester.exception;
+
+import org.example.mikhaylovivan2semester.dto.Response;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+
+@ControllerAdvice
+public class GlobalExceptionHandler {
+
+  @ExceptionHandler(Exception.class)
+  public ResponseEntity<Response<String>> handleGeneralException(Exception ex) {
+    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .body(new Response<>(500, "Внутренняя ошибка: " + ex.getMessage()));
+  }
+
+  @ExceptionHandler(UserAlreadyExistsException.class)
+  public ResponseEntity<Response<String>> handleUserAlreadyExists(UserAlreadyExistsException ex) {
+    return ResponseEntity.status(HttpStatus.CONFLICT).body(new Response<>(409, ex.getMessage()));
+  }
+
+  @ExceptionHandler(InvalidCredentialsException.class)
+  public ResponseEntity<Response<String>> handleInvalidCredentials(InvalidCredentialsException ex) {
+    return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(new Response<>(401, ex.getMessage()));
+  }
+}
